word wrapping for aboutus page in band members cards fixed, added preloading for imgs to profile image carousel

--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -47,6 +47,7 @@
 .band-member p {
     text-align: center;
     margin: 10px auto;
+    width: 95%;
     word-wrap: break-word;
 }
 
